--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="hero-title mb-3">Halo  Saya Adhitia Nur Riski</h1>
+          <h1 class="hero-title mb-3">Halo  Saya Adhitia </h1>
           <p class="hero-subtitle"><span class="typed" data-typed-items="Graphic Desainer, Junior Developer"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
